tests/golden/type_errors/namespace_import_duplicate_alias.cd
let lib = 1;
import "../namespace_import_value/lib.cd" as lib;
